--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,8 @@
 .page {
     margin-left: auto;
     margin-right: auto;
-    width: 1600px;}
+    width: 1600px;
+    font-family: 'Inter', Arial, sans-serif;
+    font-size: 16px;
+    line-height: 20px;
+}
