--- a/pages/index.css
+++ b/pages/index.css
@@ -2,6 +2,10 @@
     margin-left: auto;
     margin-right: auto;
     width: 1600px;
+    min-width: 1100px;
+    max-width: 1600px;
+    margin-left: auto;
+    margin-right: auto;
     font-family: 'Inter', Arial, sans-serif;
     font-size: 16px;
     line-height: 20px;
